--- a/hello.html
+++ b/hello.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FreedomAI</title>
+    <title>BreakupBuddy</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #E6E1F9;
             padding: 20px;
             border-radius: 10px;
-
         }
 
-        .chat-title{
+        .chat-title {
             text-align: center;
-            color: #160038; 
+            color: #160038;
         }
 
         .chat-container {
-            max-width: 800px;
+            width: 400px;
             background-color: #fff;
             border: 1px solid #ddd;
             margin: 0 auto;
             padding: 10px;
             border-radius: 10px;
-
         }
 
         .chat-message {
@@ -34,33 +32,47 @@
             margin-bottom: 10px;
             border-radius: 10px;
             max-width: 80%;
+            clear: both;
+        }
+
+        .chat-message-user {
+            background-color: #ab9bf3;
+            float: right;
         }
 
         .user-input {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #fff;
-            border-top: 1px solid #ddd;
+            background-color: #ffffff;
+            border-top: 1px solid #dddddd;
             padding: 10px;
+            border-radius: 0 0 10px 10px;
+            margin-top: 10px; 
+            display: inline-block;
+            width: 95%;
         }
 
         #userMessage {
-            flex-grow: 1;
+            width: 82%;
             padding: 5px;
             border: none;
             border-radius: 10px;
+            display: inline-block;
         }
 
         #sendMessageBtn {
-            background-color: #007bff;
-            color: #fff;
+            color: #160038;
+            background-color: #ffffff;
             border: none;
             padding: 5px 15px;
             cursor: pointer;
             border-radius: 10px;
+            display: inline-block;
         }
 
+        #userButton {
+            color: #160038;
+            background-color: #ffffff;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -69,23 +81,29 @@
             <div class="col-md-10 offset-md-1">
                 <div class="chat-container">
                     <div class="chat-title">
-                        <h1>...BreakupBuddy...</h1> 
+                        <h1>BreakupBuddy</h1>
                     </div>
-                    <div class="chat">
-                        <div class="chat-message">
-                            <p>Hey, I've heard you have been struggling through a breakup. Where should we start?</p>
+                    <div id="chat">
+                        <div class="chat-message chat-message-ai">
+                            <p>Hi there! I see that you're going through a tough time. 
+                                I'm here to support you and provide some guidance. Would 
+                                you like to talk about what's going on?<br>I can ...</p>
                         </div>
                     </div>
                     <div class="user-input">
+                        <form id="userForm">
                         <input type="text" id="userMessage" placeholder="Type your message...">
                         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-                        <button id="userButton" class="material-symbols-outlined">
+                        <button id="sendMessageBtn" class="material-symbols-outlined" id="sendMessageBtn">
                             send
                         </button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
