--- a/hello.html
+++ b/hello.html
@@ -55,7 +55,10 @@
             padding: 5px;
             border: none;
             border-radius: 10px;
-            vertical-align: middle; /* New property */
+            vertical-align: middle; 
+            resize: none;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
         }
 
         #sendMessageBtn {
@@ -65,7 +68,7 @@
             padding: 5px 15px;
             cursor: pointer;
             border-radius: 10px;
-            vertical-align: middle; /* New property */
+            vertical-align: middle; 
         }
 
         #userButton {
@@ -97,7 +100,7 @@
                     </div>
                     <div class="user-input">
                         <form id="userForm">
-                        <input type="text" id="userMessage" placeholder="Type your message...">
+                        <textarea type="text" id="userMessage" placeholder="Type your message..."></textarea>
                         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
                         <button id="sendMessageBtn" class="material-symbols-outlined" id="sendMessageBtn">
                             send
